--- a/css/main.css
+++ b/css/main.css
@@ -166,6 +166,18 @@ a{
 /*    margin-top: 100vh;*/
 }
 
+.video-wrapper{
+    height: 100%;
+    width: 100%;
+    display: flex;
+}
+
+#must-be-lucky{
+    width: 100%;
+    height: 100%;
+    margin: auto;
+}
+
 .coming-soon{
     width: 100%;
     text-align: center;
