--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,3 +1,10 @@
+@media only screen and (min-width: 1920px){
+    #must-be-lucky{
+        width: 1440px;
+        height: 805px;
+    }
+}
+
 @media only screen and (max-width: 800px){
     
     h1{
