--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -5,6 +5,10 @@
         line-height: 160px;
     }
     
+    .press-header{
+        margin-top: 120px !important;
+    }
+    
     #a2{
         margin-left: -18px;
     }
@@ -20,6 +24,10 @@
         font-size: 140px;
         letter-spacing: -0.0em;
         line-height: 115px;
+    }
+    
+    .press-header{
+        margin-top: 90px !important;
     }
     
     #a2{
@@ -48,6 +56,36 @@
         font-size: 80px;
         letter-spacing: 0;
         line-height: 65px;
+    }
+    
+    .press-header{
+        margin-top: 60px !important;
+    }
+    
+    h2{
+        font-size: 6.5vw;
+        line-height: 7.5vw;
+        margin: 40px 30px;
+    }
+    
+    .pull-quote{
+        margin-bottom: 0px;
+    }
+    
+    .image-container, .spotify-container, .press-video-container{
+        width: calc(100% - 50px)
+    }
+    
+    .spotify-title{
+        margin-bottom: 15px;
+    }
+    
+    .video-title{
+        margin-bottom: 10px;
+    }
+    
+    .source{
+        margin-bottom: 20px;
     }
     
     .mobile-break{
